# PersonalBlog

./: .coverage  .manage.py.swp  Pipfile  README.md  db.sqlite3  manage.py
Blog/: .coveragerc  .models.py.swp  .views.py.swp  admin.py  apps.py  elasticsearch2_ik_backend.py  feeds.py  models.py  search_indexes.py  urls.py  utils.py  views.py
Blog/migrations/: 0001_initial.py  0002_alter_post_create_time.py  0003_auto_20211224_2124.py
Blog/templatetags/: blog_extras.py
Blog/tests/: test_models.py  test_views.py
Web_app/: asgi.py  settings.py  urls.py  wsgi.py
Web_app/scripts/: fake.py
comments/: admin.py  forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_name.py  0002_alter_comment_options.py
comments/templatetags/: comment_extras.py
comments/test/: base.py  test_models.py  test_templatetags.py  test_views.py
django-polls/: MANIFEST.IN  README.rst  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
polls/: .admin.py.swp  .tests.py.swo  .tests.py.swp  admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
templates/: .base.html.swm  .base.html.swn  .base.html.swo  .base.html.swp  base.html
templates/blog/: detail.html  index.html
templates/comments/: preview.html
templates/polls/: index.html
templates/registration/: .change_passwd_form.html.swp  .login.html.swp  login.html  password_change_done.html  password_change_form_html  password_reset_complete.html  password_reset_confirm.html  (+2 more)
users/: backends.py  forms.py  models.py  urls.py  views.py
(+15 files in other folders)
