[metadata]
name = django-polls
version=0.1
description = A Django app to conduct Web-based polls.
long_description = file:README.rst
url = https://www.example.com/
author = Listen
author_email = 1951124356@qq.com
license = BSD-3-Clause
classifiers = Environment::Web Environment
	      Framework::Django
	      Framework::Django::X.Y
	      Intended Audience::Developers
	      License::OSI Approved::BSD License
	      Operating System::OS Independent
	      Programming Language::python
	      Programming Language::python::3
	      Programming Language::python::3::Only
	      Programming Language::python::3.6
	      Programming Language::python::3.7
	      Programming Language::python::3.8
	      Topic::Internet::WWW/HTTP
	      Topic::Internet::WWW/HTTP::Dynamic
	      
[options]
include_packages_data = true
packages = find:
python_requires = >=3.6
installs_requires = Django>=X.Y
	      
	      
	      
